fixed spacing on rich text editor

--- a/ui/components/docked-composer/flavors/email/index.scss
+++ b/ui/components/docked-composer/flavors/email/index.scss
@@ -24,6 +24,17 @@
       }
     }
   }
+
+  .#{$css-prefix}picklist__label {
+    padding: {
+      left: $spacing-small;
+      right: $spacing-large;
+    }
+
+    .#{$css-prefix}icon {
+      right: $spacing-x-small;
+    }
+  }
 }
 
 .#{$css-prefix}email-composer__label {
